# stt-to-tts-voicevox

./: .gitmodules  README.md  pyproject.toml  stt-tts-voicevox.py
